# ai-job-search

./: .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml
.claude/commands/: apply.md  reset.md  setup.md
.claude/skills/job-application-assistant/: 05-cv-templates.md  06-cover-letter-templates.md  SKILL.md
cover_letters/: cover_example.typ  render.py  template.typ
cv/: main_example.yaml
documents/: README.md
